<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/viewBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/open_text"
            android:textAlignment="center" />
        <Button android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/btn"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/open"
            android:onClick="onButtonClick"
            style="@style/AppTheme.Btn" />
        <Button android:textSize="16sp"
            android:textColor="@color/gray_btn_text_color"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/back_btn"
            android:background="@drawable/btn_border_gray"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/back_to_list"
            android:onClick="back_to_menu"
            android:textAllCaps="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
    </LinearLayout>
</ScrollView>