<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/viewBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingStart="1dp"
            android:paddingEnd="1dp">
            <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
                android:id="@+id/buttonGroup"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="20dp"
                android:weightSum="3"
                app:borderColor="@color/toggle_btn"
                app:borderWidth="1dp"
                app:draggable="true"
                app:radius="18dp"
                app:ripple="true"
                app:rippleColor="@color/toggle_btn"
                app:selectedBackground="@color/toggle_btn">
                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muller"
                    app:selectedDrawableTint="@color/white"
                    app:selectedTextColor="@color/white"
                    app:text="@string/mods"
                    app:textColor="@color/colorPrimaryDark"
                    app:textSize="18sp" />
                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muller"
                    app:selectedDrawableTint="@color/white"
                    app:selectedTextColor="@color/white"
                    app:text="@string/maps"
                    app:textColor="@color/colorPrimaryDark"
                    app:textSize="18sp" />
                <com.addisonelliott.segmentedbutton.SegmentedButton
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muller"
                    app:selectedDrawableTint="@color/white"
                    app:selectedTextColor="@color/white"
                    app:text="@string/show_all"
                    app:textColor="@color/colorPrimaryDark"
                    app:textSize="18sp" />
            </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:background="@color/viewBg"
            android:paddingBottom="50dp"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>