<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/viewBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />
        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="@dimen/card_album_radius">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/album_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/title"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingTop="10dp"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_medium" />
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="bottom|center_horizontal"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5a5a5a"
                    app:sliderIndicatorUnselectedColor="#fff"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true" />
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp"
                    android:paddingTop="5dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="14dp"
                    android:paddingEnd="24dp">
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp">
                        <ImageView
                            android:id="@+id/imageView"
                            android:background="@drawable/ic_eye_orange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp" />
                        <TextView
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:id="@+id/views"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp">
                        <ImageView
                            android:id="@+id/downloadImage"
                            android:background="@drawable/ic_download_orange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp" />
                        <TextView
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:id="@+id/downloads"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp">
                        <ImageView
                            android:id="@+id/starImage"
                            android:background="@drawable/ic_star_svgrepo_com__1_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp" />
                        <TextView
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:text="@string/version"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp" />
                        <TextView
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button android:textSize="16sp"
            android:textColor="@color/gray_btn_text_color"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/rate_btn"
            android:background="@drawable/btn_border_gray"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_btn_text"
            android:onClick="onRateButtonClick"
            android:textAllCaps="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
        <Button android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp"
            android:text="@string/next"
            android:onClick="download_click"
            style="@style/AppTheme.Btn" />
        <TextView
            android:id="@+id/description"
            android:background="@drawable/btn_border_white"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="" />
        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/recommend_layout"
                android:padding="0dp"
                android:paddingTop="20dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/recommend" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:paddingBottom="50dp"
                    android:scrollbars="none"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>